# bus-lateness-analysis

./: .gitignore  .prettierignore  ANALYSIS.md  FINDINGS.md  FINDINGS_fi.md  README.md  dashboard_data.py  dashboard_data_polars.py  main.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  streamlit_app.py  streamlit_app_polars.py
.github/workflows/: pages.yml
analysis/: _shared.py  avg-line-delay.py  build-public-site-data.py  build-results-report.py  cached_queries.py  collector-blackouts.py  collector-missing-data-spots.py  context-delay-metrics.py  data-quality-report.py  hourly-delay-profile.py  line-delay-rankings.py  report_cache.py  rush-impact.py  service-alert-delay-correlation.py  stop-delay-change.py
analysis/polars/: __init__.py  _shared.py  avg-line-delay.py  build-results-report.py  cli_common.py  collector-blackouts.py  collector-missing-data-spots.py  context-delay-metrics.py  data-quality-report.py  hourly-delay-profile.py  (+5 more)
notebooks/: 01_hourly_delay_profile.ipynb  02_line_delay_rankings.ipynb  03_rush_impact.ipynb  04_collector_blackouts.ipynb  05_stop_delay_change.ipynb  06_service_alert_delay_correlation.ipynb  07_collector_missing_data_spots.ipynb  08_data_quality_report.ipynb  09_context_delay_metrics.ipynb
site/: index.html  oxlint.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
tests/: test_dashboard_data.py  test_dashboard_data_polars.py  test_polars_analysis.py  test_public_site_data.py  test_results_report.py  test_shared_analytics.py  test_streamlit_app.py  test_streamlit_app_polars.py
(+51 files in other folders)
