[project]
name = "bus-lateness-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
dependencies = [
    "duckdb>=1.5.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
    "plotly>=6.0.0",
    "streamlit>=1.44.0",
]
